; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_page_free_unlocked.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_page_free_unlocked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_page_free_unlocked(%struct.TYPE_7__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i32 (...) @vm_page_lockspin_queues()
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %7 = call i32 @vm_page_free_prepare_queues(%struct.TYPE_7__* %6)
  %8 = call i32 (...) @vm_page_unlock_queues()
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @vm_page_free_prepare_object(%struct.TYPE_7__* %9, i32 %10)
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %18 = call i32 @vm_page_release_fictitious(%struct.TYPE_7__* %17)
  br label %23

19:                                               ; preds = %2
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %21 = load i32, i32* @FALSE, align 4
  %22 = call i32 @vm_page_release(%struct.TYPE_7__* %20, i32 %21)
  br label %23

23:                                               ; preds = %19, %16
  ret void
}

declare dso_local i32 @vm_page_lockspin_queues(...) #1

declare dso_local i32 @vm_page_free_prepare_queues(%struct.TYPE_7__*) #1

declare dso_local i32 @vm_page_unlock_queues(...) #1

declare dso_local i32 @vm_page_free_prepare_object(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @vm_page_release_fictitious(%struct.TYPE_7__*) #1

declare dso_local i32 @vm_page_release(%struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
